<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaiKhoanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTaiKhoan"
        android:background="@color/colorPrimaryDark"
        app:title="@string/thongtintaikhoan"
        app:titleTextColor="#f4f3f3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/crlhinhnen"
                    android:src="@drawable/default_user"
                    android:layout_width="130dp"
                    android:layout_height="130dp" />
                <ImageView
                    android:layout_gravity="bottom|right"
                    android:src="@drawable/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiltentaikhoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/tentaikhoan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilhoten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/hoten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilquequan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/quequan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/gioitinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdonam"
                        android:checked="true"
                        android:text="@string/nam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rdonu"
                        android:layout_marginLeft="10dp"
                        android:text="@string/nu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/ngaysinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvngaysinh"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:text="27/09/1997"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/btnCapNhatThongTin"
                android:background="@drawable/custom_button_capnhatthongtin"
                android:text="@string/capnhatthongtin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnChinhSuaMatKhau"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_button_capnhatthongtin"
                android:text="@string/capnhatmatkhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>