<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarsetting"
        app:title="@string/caidat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="5dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/chonngonngu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnVI"
                    android:background="#00000000"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:drawableTop="@drawable/vn"
                    android:layout_weight="1"
                    android:text="@string/vi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btnEN"
                    android:background="#00000000"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:text="@string/en"
                    android:drawableTop="@drawable/us"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorLine"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            android:textColor="#000"
            android:text="@string/thongtinphanmem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>

</LinearLayout>