<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TinhTrangThietBiActivity"
    android:background="#f5f5f5">

    <android.support.v7.widget.Toolbar
        app:title="Chi tiết thiết bị"
        android:id="@+id/toolbartinhtrangthietbi"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btndasua"
                            android:layout_marginRight="5dp"
                            android:textColor="#fff"
                            android:background="@drawable/custom_button_dasua"
                            android:layout_weight="1"
                            android:text="@string/dasua"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginRight="10dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:text="@string/ngaybaocao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvngaybaocaodialog"
                            android:layout_marginRight="10dp"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="@string/ngaybaocao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginRight="10dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:text="@string/tinhtrangsuachua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvtinhtrangdialog"
                            android:layout_marginRight="10dp"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="@string/ngaybaocao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginRight="10dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:text="@string/nguoibaocao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvnguoibaocaodialog"
                            android:layout_marginRight="10dp"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="@string/ngaybaocao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvmh"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvmh"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/manhinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imvcheckmahinhdialog"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/circlecheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvchuotdialog"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/mouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvchuotdialog"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/chuot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imvcheckchuotdialog"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/circlecheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvcpudialog"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/casecpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvcpudialog"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/cpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imvcheckcpudialog"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/circlecheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvbanphimdialog"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/keyboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvbanphimdialog"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/banphim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imvcheckbanphimdialog"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/circlecheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvosdialog"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/os"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvosdialog"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/hedieuhanh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imvcheckosdialog"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/circlecheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:paddingTop="5dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="18dp"
                android:text="@string/phanmem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtphanmemdialog"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="18dp"
                android:text="@string/khac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtkhacdialog"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>