<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="2dp"
    android:background="@color/colorbackground">

    <android.support.v7.widget.CardView
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:text="@string/mamay"
                    android:layout_marginRight="10dp"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvmamaythongbao"
                    android:text="Mã máy"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:text="@string/nguoibaocao"
                    android:layout_marginRight="10dp"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvnguoibaocaothongbao"
                    android:text="aaaaaaaaaaaaaaaaaaaaaaaaa"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="#ea0000"
                android:text="@string/xemchitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:id="@+id/tvthoigianthongbao"
                    android:text="Thời gian"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>



    </android.support.v7.widget.CardView>



</LinearLayout>